<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.shitshop.storeshits.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_catalog"
        android:name="com.shitshop.storeshits.ui.catalog.CatalogFragment"
        android:label="@string/title_catalog"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/navigation_basket"
        android:name="com.shitshop.storeshits.ui.basket.BasketFragment"
        android:label="@string/title_basket"
        tools:layout="@layout/fragment_basket" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.shitshop.storeshits.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_verificationCodeFragment"
            app:destination="@id/verification_code_fragment" />
        <action
            android:id="@+id/action_navigation_profile_to_personalDateFragment"
            app:destination="@id/personal_data_fragment" />
        <action
            android:id="@+id/action_navigation_profile_to_feedbackFragment2"
            app:destination="@id/feedback_fragment" />
        <action
            android:id="@+id/action_navigation_profile_to_favoritesFragment2"
            app:destination="@id/favorites_fragment" />
    </fragment>
    <fragment
        android:id="@+id/verification_code_fragment"
        android:name="com.shitshop.storeshits.ui.profile.register.verification.VerificationCodeFragment"
        android:label="fragment_verification_code"
        tools:layout="@layout/fragment_verification_code" >
        <argument
            android:name="number"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/personal_data_fragment"
        android:name="com.shitshop.storeshits.ui.profile.list_profile.personal_data.PersonalDataFragment"
        android:label="fragment_personal_date"
        tools:layout="@layout/fragment_personal_data" />
    <fragment
        android:id="@+id/feedback_fragment"
        android:name="com.shitshop.storeshits.ui.profile.list_profile.feedback.FeedbackFragment"
        android:label="fragment_feedback"
        tools:layout="@layout/fragment_feedback" />
    <fragment
        android:id="@+id/favorites_fragment"
        android:name="com.shitshop.storeshits.ui.profile.list_profile.favorites.FavoritesFragment"
        android:label="fragment_favorites"
        tools:layout="@layout/fragment_favorites" />
    <action android:id="@+id/action_global_navigation_profile" app:destination="@id/navigation_profile" />

</navigation>